personal_site/static/css/main/home.css
html,
body {
  font-family: "Avenir Next", system-ui, "Helvetica Neue", sans-serif;  /*background-color: rgb(0, 216, 255);*/
}

.body-wrapper {
  padding: 1em;
  margin: 0 auto;
  width: 900px;
  height: 80%;
  background-color: #fcfcfc;
  border-radius: 10px;
}

a {
  text-decoration: none;
}

.center {
  text-align: center;
  margin: auto;
}

h1 {
  font-size: 3.5rem;
  line-height: 1.25;
  letter-spacing: 0.2em;
  margin: 2rem auto 1rem;
  text-align: center;
}

@media (max-width:800px) {
  h1 {
    font-size: 4em;
  }

}

@media (min-width:801px) {
  h1 {
    font-size: 5em;
  }

}

.top-title {
  margin: -10px 0px 0px 0px;
}

.color-changer {
  text-align: center;
  -webkit-animation: colorchanger 30s infinite;
  animation: colorchanger 30s infinite;
}

.profile {
  display: block;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  margin: 1rem auto;
  border: 10px solid currentColor;
}

@-webkit-keyframes colorchanger {
  0%,
  100% {
    color: #21c900;
  }

  50% {
    color: #178f00;
  }

}

@keyframes colorchanger {
  0%,
  100% {
    color: #21c900;
  }

  50% {
    color: #178f00;
  }

}

.social-buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: -10px;
}

.social-buttons__button {
  margin: 10px 5px 0;
}

.social-button {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  outline: none;
  width: 70px;
  height: 70px;
  text-decoration: none;
}

.social-button__inner {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  border-radius: 100%;
  background: #ddd;
  text-align: center;
}

.social-button i,
.social-button svg {
  position: relative;
  z-index: 1;
  transition: 0.3s;
}

.social-button i {
  font-size: 28px;
}

.social-button svg {
  height: 40%;
  width: 40%;
}

.social-button::after {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  display: block;
  width: 0;
  height: 0;
  border-radius: 100%;
  transition-duration: 0.3s;
}

.social-button:focus,
.social-button:hover {
  color: #ddd;
}

.social-button:focus::after,
.social-button:hover::after {
  width: 100%;
  height: 100%;
  margin-left: -50%;
}

.social-button--facebook {
  color: #3b5999;
}

.social-button--facebook::after {
  background: #3b5999;
}

.social-button--linkedin {
  color: #0077b5;
}

.social-button--linkedin::after {
  background: #0077b5;
}

.social-button--github {
  color: #575e56;
}

.social-button--github::after {
  background: #575e56;
}

.button-wrapper {
  padding-top: 20px;
}

.contact {
  background-color: #00d16f;
  font-size: 1.6em;
  color: #fff;
  padding: 5px 12px 5px 12px;
  border-radius: 10px;
  transition-duration: 1s;
  letter-spacing: normal;
}

@media (min-width:850px) {
  .contact:hover {
    background-color: rgb(100, 107, 100);
    padding: 5px 30px 5px 30px;
    color: #00d16f;
    letter-spacing: 6px;
  }

}

.title-wrapper {
  text-align: center;
  font-size: 2em;
  color: #212121;
  margin: -25px 0px -10px 0px;
  letter-spacing: 0.1em;
}

.project-base {
  background: #4286f4;
  border-radius: 25px;
  margin: -15px 0px 0px 0px;
  transition: -webkit-transform .4s;
  transition: transform .4s;
  transition: transform .4s, -webkit-transform .4s;
}

@media (max-width:1000px) {
  .things {
    width: 85%;
  }

}

@media (min-width:1001px) {
  .things {
    width: 75%;
  }

}

.project-title {
  padding-top: 15px;
  color: #fff;
  padding-bottom: 2px;
  font-size: 2em;
}

.project-description {
  margin: auto;
  padding-bottom: 20px;
  color: #fff;
  font-size: 1.3em;
  transition-duration: 2.5s;
}

@media (max-width:1000px) {
  .things-description {
    max-width: 85%;
  }

}

@media (min-width:1001px) {
  .things-description {
    max-width: 90%;
  }

}

.project-base:hover {
  -webkit-transform: translateY(-9px);
  transform: translateY(-9px);
}

.experiences {
  background-color: rgb(211, 211, 211);
  border-radius: 25px;
  padding: 5px 0px 5px 0px;
}

.experience {
  color: rgb(56, 56, 56);
  font-size: 1.5em;
}

.experience-description {
  color: rgb(40, 40, 40);
  font-size: 1.3em;
  padding: 0px 20px 0px 20px;
}

.current-experience-description {
  font-size: 20px;
}

.experience-link {
  color: rgb(40, 40, 40);
}

.chronicle {
  text-decoration: underline;
}

footer {
  text-align: center;
  margin: auto;
}

.copyright {
  margin: 20px 0px -15px 0px;
  color: #515151;
}

.source-wrapper {
  margin: auto;
}

.source {
  color: #777;
}

.source:hover {
  color: rgb(10, 10, 10);
}

